Fix contrast issue #6

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -14,7 +14,7 @@ body{
 }
 
 a,a:visited{
-  color: #2980b9;
+  color: #07A;
 }
 
 span.wr{
@@ -123,10 +123,11 @@ ul{
 }
 
 blockquote{
-  color: #777;
+  color: #456;
   margin-left: 0;
   margin-top: 2em;
   margin-bottom: 2em;
+
   span{
     float: left;
     margin-left: 1rem;
